<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_reward_landscape_1280_720"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/load_reward_landscape_1280_720" />
        <Button
            android:id="@+id/btn_reward_portrait_1280_720"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/load_reward_portrait_1280_720" />
        <Button
            android:id="@+id/btn_reward_landscape_720_1280"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/load_reward_landscape_720_1280" />
        <Button
            android:id="@+id/btn_reward_portrait_720_1280"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/load_reward_portrait_720_1280" />
        <TextView
            android:id="@+id/tv_msg"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/error_msg"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/item_clicked"
            android:textColor="@color/ads_app_magic_color_text_primary"
            android:textSize="15sp" />

        <Switch
            android:id="@+id/ad_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="12dp"
            android:checked="false" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_reward_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"/>

</LinearLayout>