<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_msg"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/banner_describe"
            android:gravity="center"/>
        <RadioGroup
            android:id="@+id/interstitial_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:checkedButton="@id/btn_int_pic_1280_720_port">
                <RadioButton
                    android:id="@+id/btn_int_pic_1280_720_land"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_36"
                    android:background="@drawable/bg_radio_btn"
                    android:textSize="@dimen/ads_app_magic_text_size_body3"
                    android:button="@null"
                    android:textColor="@drawable/text_color_radio_btn"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/load_interstitial_picture_1280_720_landscape"/>
                <RadioButton
                    android:id="@+id/btn_int_pic_1280_720_port"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_36"
                    android:background="@drawable/bg_radio_btn"
                    android:textSize="@dimen/ads_app_magic_text_size_body3"
                    android:button="@null"
                    android:textColor="@drawable/text_color_radio_btn"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/load_interstitial_picture_1280_720_portrait"/>
                <RadioButton
                    android:id="@+id/btn_int_pic_720_1280_land"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_36"
                    android:background="@drawable/bg_radio_btn"
                    android:textSize="@dimen/ads_app_magic_text_size_body3"
                    android:button="@null"
                    android:textColor="@drawable/text_color_radio_btn"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/load_interstitial_picture_720_1280_landscape"/>
                <RadioButton
                    android:id="@+id/btn_int_pic_720_1280_port"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_36"
                    android:background="@drawable/bg_radio_btn"
                    android:textSize="@dimen/ads_app_magic_text_size_body3"
                    android:button="@null"
                    android:textColor="@drawable/text_color_radio_btn"
                    android:gravity="center"
                    android:text="@string/load_interstitial_picture_720_1280_portrait"/>
                <RadioButton
                    android:id="@+id/btn_int_video_1280_720_land"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_36"
                    android:background="@drawable/bg_radio_btn"
                    android:textSize="@dimen/ads_app_magic_text_size_body3"
                    android:button="@null"
                    android:textColor="@drawable/text_color_radio_btn"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/load_interstitial_video_1280_720_landscape"/>
                <RadioButton
                    android:id="@+id/btn_int_video_1280_720_port"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_36"
                    android:background="@drawable/bg_radio_btn"
                    android:textSize="@dimen/ads_app_magic_text_size_body3"
                    android:button="@null"
                    android:textColor="@drawable/text_color_radio_btn"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/load_interstitial_video_1280_720_portrait"/>
                <RadioButton
                    android:id="@+id/btn_int_video_720_1280_land"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_36"
                    android:background="@drawable/bg_radio_btn"
                    android:textSize="@dimen/ads_app_magic_text_size_body3"
                    android:button="@null"
                    android:textColor="@drawable/text_color_radio_btn"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/load_interstitial_video_720_1280_landscape"/>
                <RadioButton
                    android:id="@+id/btn_int_video_720_1280_port"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_36"
                    android:background="@drawable/bg_radio_btn"
                    android:textSize="@dimen/ads_app_magic_text_size_body3"
                    android:button="@null"
                    android:textColor="@drawable/text_color_radio_btn"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/load_interstitial_video_720_1280_portrait"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_ins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/load_interstitial"/>
        <TextView
            android:id="@+id/tv_msg"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/error_msg"/>
    </LinearLayout>

</FrameLayout>