<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Honor Device Co., Ltd. 2021-2023. All rights reserved.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_load_ad_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/load_splash_portrait_picture_1080_1920" />

            <Button
                android:id="@+id/bt_load_ad_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/load_splash_portrait_picture_1080_1620" />

            <Button
                android:id="@+id/bt_load_ad_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/load_splash_portrait_video_720_1280" />

            <Button
                android:id="@+id/bt_load_ad_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/load_splash_landscape_video_1280_720" />


            <Button
                android:id="@+id/bt_load_ad_pre_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/load_pre_cache" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_query_ad_pre_cache_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/query_ad_pre_cache_count" />

                <TextView
                    android:id="@+id/ads_cache_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="0" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>