<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_load_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_load_ad"/>

    <FrameLayout
        android:id="@+id/ad_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.hihonor.adsdk.demo.external.widget.MyViewPager
            android:id="@+id/view_pager"
            android:layout_gravity="center"
            android:layout_width="270dp"
            android:layout_height="152dp"/>

        <LinearLayout
            android:id="@+id/ad_load_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:visibility="visible"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/loading_item"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_error_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:visibility="gone"
            tools:text="@string/error_msg"/>

    </FrameLayout>
</LinearLayout>